--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,9 +26,132 @@
     url(../assets/Fonts/futura/Futura\ Bold\ font.ttf) format("woff");
 }
 
+/* carsoul............................................................................................................................................... */
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Verdana, sans-serif;
+  margin: 0;
+}
+
+.mySlides {
+  display: none;
+}
+
+img {
+  vertical-align: middle;
+}
+
+.mySlides {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+.hideContainer {
+  animation: hide-in 1.5s ease-out 0s forwards;
+}
+
+.showContainer {
+  animation: show-in 1.5s ease-out 0s forwards;
+}
+
+.slideshow-container1 {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+  transform: translateX(-100vw);
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
 .fadeInAnimation {
   animation: fade-in 1s ease-out 0s forwards;
   /* animation: fade-in  1s ease-in forwards infinite; */
+}
+
+.slideDiv {
+  transform: translateX(-250vw);
 }
 
 .circle {
@@ -239,9 +362,9 @@
 .one {
   height: 30vh;
   width: 16vw;
+  background-size: 100% 100%;
   background-image: url("../assets/Images/Apartment\ 1.jpg");
   background-repeat: no-repeat;
-  background-size: 100% 100%;
 }
 
 .two {
@@ -849,38 +972,6 @@
   }
 }
 
-@keyframes Slide {
-  0% {
-    transform: translateY(-40vh);
-  }
-
-  100% {
-    transform: translateY(68vh);
-  }
-}
-
-@keyframes mobSilde {
-  0% {
-    transform: translateY(-40vh);
-  }
-
-  100% {
-    transform: translateY(50vh);
-  }
-}
-
-@keyframes fade-in {
-  0% {
-    transform: translateX(100%);
-  }
-  60% {
-    transform: translateX(60%);
-  }
-  100% {
-    transform: translateX(0);
-  }
-}
-
 @media (min-width: 1024px) {
   .circle {
     position: absolute;
@@ -1332,124 +1423,36 @@
   }
 }
 
-/* carsoul............................................................................................................................................... */
-/* carsoul............................................................................................................................................... */
-/* carsoul............................................................................................................................................... */
-/* carsoul............................................................................................................................................... */
-/* carsoul............................................................................................................................................... */
-/* carsoul............................................................................................................................................... */
-/* carsoul............................................................................................................................................... */
-/* carsoul............................................................................................................................................... */
-/* carsoul............................................................................................................................................... */
-/* carsoul............................................................................................................................................... */
-/* carsoul............................................................................................................................................... */
-/* carsoul............................................................................................................................................... */
-/* carsoul............................................................................................................................................... */
-/* carsoul............................................................................................................................................... */
-/* carsoul............................................................................................................................................... */
-/* carsoul............................................................................................................................................... */
-/* carsoul............................................................................................................................................... */
-/* carsoul............................................................................................................................................... */
-* {
-  box-sizing: border-box;
+@keyframes Slide {
+  0% {
+    transform: translateY(-40vh);
+  }
+
+  100% {
+    transform: translateY(68vh);
+  }
 }
 
-body {
-  font-family: Verdana, sans-serif;
-  margin: 0;
+@keyframes mobSilde {
+  0% {
+    transform: translateY(-40vh);
+  }
+
+  100% {
+    transform: translateY(50vh);
+  }
 }
 
-.mySlides {
-  display: none;
-}
-
-img {
-  vertical-align: middle;
-}
-
-.mySlides {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
-
-/* Next & previous buttons */
-.prev,
-.next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -22px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active,
-.dot:hover {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
+@keyframes fade-in {
+  0% {
+    transform: translateX(100%);
+  }
+  60% {
+    transform: translateX(60%);
+  }
+  100% {
+    transform: translateX(0);
+  }
 }
 
 @keyframes fade {
@@ -1462,11 +1465,35 @@ img {
   }
 }
 
-/* On smaller screens, decrease text size */
+@keyframes show-in {
+  0% {
+    opacity: 0;
+  }
+  60% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes hide-in {
+  0% {
+    opacity: 1;
+  }
+  60% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+/* On smaller screens, decrease text size
 @media only screen and (max-width: 300px) {
   .prev,
   .next,
   .text {
     font-size: 11px;
   }
-}
+} */
