--- a/styles/globals.css
+++ b/styles/globals.css
@@ -622,7 +622,12 @@ img {
   display: inline;
 }
 
-@media (max-width: 768px) and (min-width: 600px) {
+@media (max-width: 768px) and (min-width: 605px) {
+  .right-side-text{
+    font-size:8px;
+
+  } 
+ 
   .circle {
     position: absolute;
     bottom: 0;
@@ -775,9 +780,9 @@ img {
     display: block;
   }
 
-  .header {
+  /* .right-side  {
     display: none;
-  }
+  } */
 
   .headTab {
     display: block;
@@ -802,7 +807,9 @@ img {
   }
 
   .card {
-    width: 40vw;
+    width: 52vw;
+    margin-left:32px;
+    border:2px solid red;
   }
 
   .Sliding {
@@ -819,6 +826,46 @@ img {
   }
 
   .two {
+    width: 32vw;
+    height: 40vh;
+  }
+  .three {
+    width: 32vw;
+    height: 40vh;
+  }
+  .four {
+    width: 32vw;
+    height: 40vh;
+  }
+  .five {
+    width: 32vw;
+    height: 40vh;
+  }
+  .six {
+    width: 32vw;
+    height: 40vh;
+  }
+  .seven {
+    width: 32vw;
+    height: 40vh;
+  }
+  .eight {
+    width: 32vw;
+    height: 40vh;
+  }
+  .nine {
+    width: 32vw;
+    height: 40vh;
+  }
+  .ten{
+    width: 32vw;
+    height: 40vh;
+  }
+  .elevan {
+    width: 32vw;
+    height: 40vh;
+  }
+  .twelve {
     width: 32vw;
     height: 40vh;
   }
@@ -871,6 +918,8 @@ img {
 }
 
 @media (max-width: 600px) {
+
+  
   .circle {
     position: absolute;
     bottom: 0;
@@ -933,13 +982,21 @@ img {
       calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-offset-color);
   }
 
-  .header {
+  .right-side  {
     display: none;
   }
 
-  .LogoIMg {
-    padding-top: 1.8rem;
+  .Logo{
+  
+    margin:0;
+    padding:0;
+    display:flex;
+    justify-content:flex-start;
+    padding-left:0;
+    margin-left:0;
   }
+
+  
 
   .mobDropDown {
     display: block;
@@ -950,7 +1007,7 @@ img {
     padding-top: 40px;
     align-items: flex-start;
     position: absolute;
-    top: -38vh;
+    top: 0vh;
     animation: mobSilde 1s ease-out 0s forwards;
   }
 
@@ -1015,6 +1072,22 @@ img {
   }
 
   .four {
+    width: 70vw;
+    height: 40vh;
+  }
+  .five {
+    width: 70vw;
+    height: 40vh;
+  }
+  .six {
+    width: 70vw;
+    height: 40vh;
+  }
+  .seven {
+    width: 70vw;
+    height: 40vh;
+  }
+  .eight {
     width: 70vw;
     height: 40vh;
   }
@@ -1310,7 +1383,7 @@ img {
   }
 
   .card {
-    margin-left: 12.5rem;
+    margin-left: 22.5rem;
   }
 }
 
@@ -1325,16 +1398,16 @@ img {
   justify-content:space-between;
   
 
-  padding-top:32px;
+  padding-top:12px;
   padding-left:23px;
   padding-right:23px;
-  border:2px solid red;
-  height:15vh;
+
+  height: 12vh;
 }
 
 
 .logo{
-  width: 72px;
+  width: 52px;
   
   
   
@@ -1347,15 +1420,24 @@ img {
 
 }
 
+.headTab{
+  display:none;
+}
+
+.right-side-text{
+  font-size: 14px;
+  line-height: 3px;
+}
+
 
  
 
 @media (min-width: 1440px) {
 
 
+ 
 
 
-}
 
   
 .circle {
@@ -1596,26 +1678,20 @@ img {
     width: 12vw;
   }
 
-  .card {
-    margin-left: 12.5rem;
-  }
-
-@keyframes Slide {
-  0% {
-    transform: translateY(-40vh);
-  }
-
-@keyframes Slide {
-  0% {
-    transform: translateY(-40vh);
-  }
-
+  
 
 }
+@keyframes Slide {
+  0% {
+    transform: translateY(-40vh);
+  }
+
 
   100% {
     transform: translateY(50vh);
   }
+}
+
 }
 
 @keyframes fade-in {
